force-app/main/default/objects/Account/fields/ABM__c.field-meta.xml
<CustomField>
    <fullName>ABM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>