force-app/main/default/objects/Account/fields/ABM_Software__c.field-meta.xml
<CustomField>
    <fullName>ABM_Software__c</fullName>
    <label>ABM Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adapt.io</fullName>
            </value>
            <value>
                <fullName>Azalead</fullName>
            </value>
            <value>
                <fullName>Demandbase</fullName>
            </value>
            <value>
                <fullName>DiscoverOrg</fullName>
            </value>
            <value>
                <fullName>El Toro</fullName>
            </value>
            <value>
                <fullName>Engagio</fullName>
            </value>
            <value>
                <fullName>Folloze</fullName>
            </value>
            <value>
                <fullName>Infer</fullName>
            </value>
            <value>
                <fullName>Jabmo</fullName>
            </value>
            <value>
                <fullName>Kwanzoo</fullName>
            </value>
            <value>
                <fullName>Leadiro</fullName>
            </value>
            <value>
                <fullName>LeanData</fullName>
            </value>
            <value>
                <fullName>Madison Logic</fullName>
            </value>
            <value>
                <fullName>Madison Logic Platform</fullName>
            </value>
            <value>
                <fullName>Pluris Offer Management</fullName>
            </value>
            <value>
                <fullName>Salesforce Social.com</fullName>
            </value>
            <value>
                <fullName>SAS Marketing Optimization</fullName>
            </value>
            <value>
                <fullName>SIX &amp; FLOW</fullName>
            </value>
            <value>
                <fullName>Terminus</fullName>
            </value>
            <value>
                <fullName>Triblio</fullName>
            </value>
            <value>
                <fullName>Vendemore</fullName>
            </value>
            <value>
                <fullName>YesPath</fullName>
            </value>
            <value>
                <fullName>ZenIQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>