force-app/main/default/objects/Account/fields/Accessing_Seismic__c.field-meta.xml
<CustomField>
    <fullName>Accessing_Seismic__c</fullName>
    <label>Where Customer Accesses Content</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>MAP</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>