force-app/main/default/objects/Account/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <description>As of 3/20/2020: Murugan uses this field to help with territory definitions.  This should not be removed until after territories are rolled out completely.  Dave has some reports that use this field, need to ensure that this is addressed.</description>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Role</label>
    <type>Text</type>
</CustomField>