force-app/main/default/objects/Account/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>Used By Copy.ai</description>
    <label>Account Plan</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>