force-app/main/default/objects/Account/fields/Account_Research_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Research_Status__c</fullName>
    <description>Copy.ai field</description>
    <label>Account Research Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>