force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <label>Account Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>