force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>An account record can only be a single status at a time, as defined by their tracked interactions with sales (i.e. opportunity stages) and marketing (i.e. lead scoring and campaign interactions.)</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Ready to Work</fullName>
            </value>
            <value>
                <fullName>Attempting</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Customer Qualified Account</fullName>
                <isActive>false</isActive>
                <label>Customer Qualified Account</label>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <isActive>false</isActive>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Excluded</fullName>
                <isActive>false</isActive>
                <label>Excluded</label>
            </value>
            <value>
                <fullName>Marketing Qualified Account</fullName>
                <isActive>false</isActive>
                <label>Marketing Qualified Account</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Sales Qualified Account</fullName>
                <isActive>false</isActive>
                <label>Sales Qualified Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>