force-app/main/default/objects/Account/fields/AccountPrioritization__c.field-meta.xml
<CustomField>
    <fullName>AccountPrioritization__c</fullName>
    <inlineHelpText>Tier indicates how the Account Owner and/or SDR is prioritizing this account.</inlineHelpText>
    <label>Account Prioritization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>