force-app/main/default/objects/Account/fields/Active_Platinum_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Active_Platinum_Subscriptions__c</fullName>
    <description>This value is maintained by DLRS.  It rolls up for any Platinum Support subscription that is active or that has a start date in the future.</description>
    <label>Active_Platinum_Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>