force-app/main/default/objects/Account/fields/Active_Sandbox_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Active_Sandbox_Tenants__c</fullName>
    <description>Count of active sandbox tenants on this Account. Populated by dlrs</description>
    <label>Active Sandbox Tenants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>