force-app/main/default/objects/Account/fields/Active_SAVO_Client__c.field-meta.xml
<CustomField>
    <fullName>Active_SAVO_Client__c</fullName>
    <formula>SAVO_Products__c || KnowledgeTree_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>An Active SAVO Customer, including SAVO and KnowledgeTree Product(s).</inlineHelpText>
    <label>Active SAVO Client</label>
    <type>Checkbox</type>
</CustomField>