force-app/main/default/objects/Account/fields/Admin_Filter__c.field-meta.xml
<CustomField>
    <fullName>Admin_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field use by Admin to mark data for filtering so that we can use to join in SOQL</description>
    <label>Admin Filter</label>
    <type>Checkbox</type>
</CustomField>