force-app/main/default/objects/Account/fields/Adoption__c.field-meta.xml
<CustomField>
    <fullName>Adoption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Journey Stage:</description>
    <inlineHelpText>Adoption – In this status, client is using products/solutions and is expanding from pilot groups to other teams.  Proof of concept has been established. Champion is trying to institutionalize and drive adoption across the organization</inlineHelpText>
    <label>Adoption</label>
    <type>Checkbox</type>
</CustomField>