force-app/main/default/objects/Account/fields/Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Advocacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Journey Stage: Advocacy – account has one or more advocates who can and will speak on your behalf. Expect them to cycle through the buying journey again and again.</description>
    <label>Advocacy</label>
    <type>Checkbox</type>
</CustomField>