force-app/main/default/objects/Account/fields/AI_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>AI_Request_Notes__c</fullName>
    <description>Notes from an AI Request</description>
    <label>AI Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>