force-app/main/default/objects/Account/fields/AI_Restricted__c.field-meta.xml
<CustomField>
    <fullName>AI_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked(True) if the customer has requested to restrict the use of AI-powered features.</description>
    <inlineHelpText>Check this box if the customer has requested to restrict the use of AI-powered features. Managed by Legal and Operations teams.</inlineHelpText>
    <label>AI Restricted</label>
    <type>Checkbox</type>
</CustomField>