force-app/main/default/objects/Account/fields/Allow_Usage_of_3rd_Party_Resources__c.field-meta.xml
<CustomField>
    <fullName>Allow_Usage_of_3rd_Party_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-781
Updated the Field Label- GTMS-2395</description>
    <label>Account RESTRICTS 3rd Party Resources</label>
    <type>Checkbox</type>
</CustomField>