force-app/main/default/objects/Account/fields/Allow_Usage_of_Off_shore_Resources__c.field-meta.xml
<CustomField>
    <fullName>Allow_Usage_of_Off_shore_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-781</description>
    <label>Account RESTRICTS Off-Shore Resources</label>
    <type>Checkbox</type>
</CustomField>