force-app/main/default/objects/Account/fields/AllowList__c.field-meta.xml
<CustomField>
    <fullName>AllowList__c</fullName>
    <label>Allow List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>