force-app/main/default/objects/Account/fields/AM_CSM_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_CSM_Assigned_Date__c</fullName>
    <label>AM/CSM Assigned Date</label>
    <type>Date</type>
</CustomField>