force-app/main/default/objects/Account/fields/Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Amount_Overdue__c</fullName>
    <label>Amount Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>