force-app/main/default/objects/Account/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <label>Apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Act-On</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Eloqua</fullName>
            </value>
            <value>
                <fullName>ExactTarget</fullName>
            </value>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>MS Dynamics</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Other Tablet</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Windows Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>