force-app/main/default/objects/Account/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <description>No longer used</description>
    <label>AUM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1B</fullName>
            </value>
            <value>
                <fullName>1B - 20B</fullName>
            </value>
            <value>
                <fullName>21 - 50B</fullName>
            </value>
            <value>
                <fullName>51 - 75B</fullName>
            </value>
            <value>
                <fullName>76 - 100B</fullName>
            </value>
            <value>
                <fullName>100+B</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>