force-app/main/default/objects/Account/fields/Aware__c.field-meta.xml
<CustomField>
    <fullName>Aware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Journey Stage: Aware – individual knows they have a problem/opportunity.</description>
    <label>Aware</label>
    <type>Checkbox</type>
</CustomField>