force-app/main/default/objects/Account/fields/Beta_Program_Member__c.field-meta.xml
<CustomField>
    <fullName>Beta_Program_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beta Program Member</label>
    <type>Checkbox</type>
</CustomField>