force-app/main/default/objects/Account/fields/Billing_Country_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Iso_Code__c</fullName>
    <description>Used to match Percolate country</description>
    <formula>BillingCountryLookupAuto__r.pw_ccpro__IsoCode_2__c</formula>
    <label>Billing Country Iso Code</label>
    <type>Text</type>
</CustomField>