force-app/main/default/objects/Account/fields/BillingCountryLookupAuto__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryLookupAuto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup or link to provenworks object for aligning country specific information</description>
    <label>Billing Country Lookup</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>Account (BillingCountryLookup)</relationshipLabel>
    <relationshipName>FKBillingCountryLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>