force-app/main/default/objects/Account/fields/BillingPostalCode5__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode5__c</fullName>
    <description>this can be provided by Provenworks</description>
    <formula>LEFT(BillingPostalCode, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingPostalCode5</label>
    <type>Text</type>
</CustomField>