force-app/main/default/objects/Account/fields/BillingStateLookupAuto__c.field-meta.xml
<CustomField>
    <fullName>BillingStateLookupAuto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup or link to provenworks object for aligning State/Province specific information</description>
    <label>Billing State Lookup</label>
    <referenceTo>pw_ccpro__State__c</referenceTo>
    <relationshipLabel>Account (BillingStateLookup)</relationshipLabel>
    <relationshipName>FKBillingStateLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>