force-app/main/default/objects/Account/fields/BillingZipCodeLookupAuto__c.field-meta.xml
<CustomField>
    <fullName>BillingZipCodeLookupAuto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup or link to provenworks object for aligning Zip/Postal Code specific information</description>
    <label>Billing ZipCode Lookup</label>
    <referenceTo>pw_ccpro__ZipCode__c</referenceTo>
    <relationshipLabel>Account (BillingZipCodeLookup)</relationshipLabel>
    <relationshipName>FKBillingZipCodeLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>