force-app/main/default/objects/Account/fields/Bizible_Fields_Changed__c.field-meta.xml
<CustomField>
    <fullName>Bizible_Fields_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A flag indicating that the Bizible fields on the Account record (BillingCountry, BillingState, Industry, Number_of_Sellers, Territory_Segment_Override__c, Verticale__c).  This will notify the BizibleFieldsBatch process that the account and its contacts need to be updated.  Once updated, the BizibleFieldsBatch will reset the flag to unchecked.</description>
    <label>Bizible Fields Changed</label>
    <type>Checkbox</type>
</CustomField>