force-app/main/default/objects/Account/fields/BlockList__c.field-meta.xml
<CustomField>
    <fullName>BlockList__c</fullName>
    <label>Block List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>