force-app/main/default/objects/Account/fields/Business_Seats__c.field-meta.xml
<CustomField>
    <fullName>Business_Seats__c</fullName>
    <description>INTEGRATION FIELD: Used by Gainsight;
Used in query to populate the Tenant object and in Internal Salesforce Updater Query and CSEVentProcessor Monthly &amp; Weekly queries. Field label changed with rollout of CPQ due to changes in naming from business processes.</description>
    <label>Field Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>