force-app/main/default/objects/Account/fields/CallCenterPlatform__c.field-meta.xml
<CustomField>
    <fullName>CallCenterPlatform__c</fullName>
    <label>Call Center Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3CLogic</fullName>
            </value>
            <value>
                <fullName>8x8 Contact Center</fullName>
            </value>
            <value>
                <fullName>8x8 ContactNow</fullName>
            </value>
            <value>
                <fullName>8x8 Virtual Contact Center</fullName>
            </value>
            <value>
                <fullName>Acqueon</fullName>
            </value>
            <value>
                <fullName>Aheeva</fullName>
            </value>
            <value>
                <fullName>Aircall</fullName>
            </value>
            <value>
                <fullName>Akkadian Console Operator</fullName>
            </value>
            <value>
                <fullName>Alcatel-Lucent OmniTouch</fullName>
            </value>
            <value>
                <fullName>Aloware</fullName>
            </value>
            <value>
                <fullName>Altitude Contact Center Software</fullName>
            </value>
            <value>
                <fullName>Altivon</fullName>
            </value>
            <value>
                <fullName>Amazon Connect</fullName>
            </value>
            <value>
                <fullName>Ameyo</fullName>
            </value>
            <value>
                <fullName>AMTELCO Call Center Systems</fullName>
            </value>
            <value>
                <fullName>Aspect</fullName>
            </value>
            <value>
                <fullName>Aspect CallCenter ACD</fullName>
            </value>
            <value>
                <fullName>Aspect Spectrum ACD</fullName>
            </value>
            <value>
                <fullName>Aspect Unified IP</fullName>
            </value>
            <value>
                <fullName>Aspect Zipwire</fullName>
            </value>
            <value>
                <fullName>Autonomy etalk</fullName>
            </value>
            <value>
                <fullName>Avaya Aura Call Center Elite</fullName>
            </value>
            <value>
                <fullName>Avaya Aura Contact Center</fullName>
            </value>
            <value>
                <fullName>Avaya BCMS</fullName>
            </value>
            <value>
                <fullName>Avaya Call Center ACD</fullName>
            </value>
            <value>
                <fullName>Avaya Call Management System</fullName>
            </value>
            <value>
                <fullName>Avaya CentreVu Supervisor</fullName>
            </value>
            <value>
                <fullName>Avaya Contact Analyzer</fullName>
            </value>
            <value>
                <fullName>Avaya Contact Center Communications</fullName>
            </value>
            <value>
                <fullName>Avaya Contact Center Control Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>