force-app/main/default/objects/Account/fields/Cases_logged_in_last_90_days__c.field-meta.xml
<CustomField>
    <fullName>Cases_logged_in_last_90_days__c</fullName>
    <description>Craig Okken Requested. Fed by API process.</description>
    <label>Cases logged in last 90 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>