force-app/main/default/objects/Account/fields/CDR__c.field-meta.xml
<CustomField>
    <fullName>CDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Development Rep</description>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>