force-app/main/default/objects/Account/fields/CDR_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>CDR_Is_Active__c</fullName>
    <formula>CDR__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Is Active</label>
    <type>Checkbox</type>
</CustomField>