force-app/main/default/objects/Account/fields/Channel_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Channel_Licenses__c</fullName>
    <description>Field label changed with rollout of CPQ due to changes in naming from business processes.</description>
    <label>Partner Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>