force-app/main/default/objects/Account/fields/Churn_COVID_Impact__c.field-meta.xml
<CustomField>
    <fullName>Churn_COVID_Impact__c</fullName>
    <inlineHelpText>Did COVID-19 have an impact on Churn? (Value set within Gainsight)</inlineHelpText>
    <label>COVID Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Reason</fullName>
            </value>
            <value>
                <fullName>Contributing Reason</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>