force-app/main/default/objects/Account/fields/Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Date__c</fullName>
    <inlineHelpText>Date when account is &quot;Churn&quot; status.</inlineHelpText>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>