force-app/main/default/objects/Account/fields/Churn_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reasons__c</fullName>
    <inlineHelpText>Value is set within Gainsight.</inlineHelpText>
    <label>Churn Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product - development, stability, or add-on</fullName>
            </value>
            <value>
                <fullName>Adoption - Readiness</fullName>
            </value>
            <value>
                <fullName>Adoption - Value (roll out H2)</fullName>
            </value>
            <value>
                <fullName>Competition- pricing or innovation</fullName>
            </value>
            <value>
                <fullName>Non-ICP</fullName>
            </value>
            <value>
                <fullName>Market Driven - Economic Impact</fullName>
            </value>
            <value>
                <fullName>Market Driven - M&amp;A or Divestiture</fullName>
            </value>
            <value>
                <fullName>Relationship - loss, risk, or balance of trade</fullName>
            </value>
            <value>
                <fullName>Experience - launch or post-launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>