force-app/main/default/objects/Account/fields/ChurnedCustomerCaseStudy__c.field-meta.xml
<CustomField>
    <fullName>ChurnedCustomerCaseStudy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Churned Customer Case Study</label>
    <type>Checkbox</type>
</CustomField>