force-app/main/default/objects/Account/fields/Cloud_Platform__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Platform__c</fullName>
    <description>REQ7071</description>
    <label>Marketplace Candidate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
                <label>Azure (MACC)</label>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>IBM Public Cloud</fullName>
            </value>
            <value>
                <fullName>Oracle Cloud</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
                <isActive>false</isActive>
                <label>Google Cloud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>