force-app/main/default/objects/Account/fields/CloudPlatforms__c.field-meta.xml
<CustomField>
    <fullName>CloudPlatforms__c</fullName>
    <label>Cloud Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actian NoSQL Object Database</fullName>
            </value>
            <value>
                <fullName>Actian X</fullName>
            </value>
            <value>
                <fullName>Pervasive PSQL</fullName>
            </value>
            <value>
                <fullName>ActiveViam ActivePivot</fullName>
            </value>
            <value>
                <fullName>Adobe BlazeDS</fullName>
            </value>
            <value>
                <fullName>Aerospike</fullName>
            </value>
            <value>
                <fullName>Alibaba Cloud ApsaraDB for RDS</fullName>
            </value>
            <value>
                <fullName>Alibaba Cloud Table Store</fullName>
            </value>
            <value>
                <fullName>Altibase</fullName>
            </value>
            <value>
                <fullName>Amazon Aurora</fullName>
            </value>
            <value>
                <fullName>Amazon DynamoDB</fullName>
            </value>
            <value>
                <fullName>Amazon Neptune</fullName>
            </value>
            <value>
                <fullName>Amazon Relational Database Service</fullName>
            </value>
            <value>
                <fullName>Apache Derby</fullName>
            </value>
            <value>
                <fullName>Apache Druid</fullName>
            </value>
            <value>
                <fullName>AtoZdatabases</fullName>
            </value>
            <value>
                <fullName>BMC Performance for DB2 Databases</fullName>
            </value>
            <value>
                <fullName>Basho</fullName>
            </value>
            <value>
                <fullName>Riak</fullName>
            </value>
            <value>
                <fullName>CA IDMS</fullName>
            </value>
            <value>
                <fullName>CA RC/Query</fullName>
            </value>
            <value>
                <fullName>IDMS</fullName>
            </value>
            <value>
                <fullName>CCI NewsDesk</fullName>
            </value>
            <value>
                <fullName>OrientDB</fullName>
            </value>
            <value>
                <fullName>CitusDB</fullName>
            </value>
            <value>
                <fullName>Clustrix</fullName>
            </value>
            <value>
                <fullName>CockroachDB</fullName>
            </value>
            <value>
                <fullName>Couchbase</fullName>
            </value>
            <value>
                <fullName>DASYLab</fullName>
            </value>
            <value>
                <fullName>DBeaver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>