force-app/main/default/objects/Account/fields/CMS_Tools__c.field-meta.xml
<CustomField>
    <fullName>CMS_Tools__c</fullName>
    <label>CMS Tools</label>
    <type>TextArea</type>
</CustomField>