force-app/main/default/objects/Account/fields/Cognism_Company_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Company_Revenue__c</fullName>
    <label>Cognism Company Revenue</label>
    <length>60</length>
    <type>Text</type>
</CustomField>