force-app/main/default/objects/Account/fields/Cognism_Industry__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Industry__c</fullName>
    <description>Industry value populated from Cognism - Value mapped to standard industry field.</description>
    <label>Cognism Industry</label>
    <length>60</length>
    <type>Text</type>
</CustomField>