force-app/main/default/objects/Account/fields/Cognism_SIC__c.field-meta.xml
<CustomField>
    <fullName>Cognism_SIC__c</fullName>
    <label>Cognism SIC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>